add endpoints for yearly and stations

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,10 @@
 <h1>Weather Data API</h1>
 <p>URL format: http://127.0.0.1:5000/api/v1/satation/date</p>
 <p>URL Example: http://127.0.0.1:5000/api/v1/10/1988-10-25</p>
+<p>URL format for one station: http://127.0.0.1:5000/api/v1/satation</p>
+<p>URL Example: http://127.0.0.1:5000/api/v1/10</p>
+<p>URL format for an year: http://127.0.0.1:5000/api/v1/yearly/station/year</p>
+<p>URL Example: http://127.0.0.1:5000/api/v1/yearly/10/1999</p>
 <p>{{data|safe}}</p>
 </body>
 </html>
